Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <div class="flex items-center gap-3 mb-2">
          <h3 class="font-display text-xl font-semibold">MakerSpace @ ROMS</h3><span class="text-sm opacity-60"></span>
         </div>
-        <p class="opacity-80">Led ideas and brainstorming for sustainability iniatives impacting Royal Oak</p>
+        <p class="opacity-80">Led ideas and brainstorming for sustainability initiatives impacting Royal Oak</p>
        </div>
       </div>
       <div class="card-hover p-6 rounded-2xl flex items-start gap-6" id="accomplishment-2">
@@ -204,50 +204,53 @@
      <p class="text-center opacity-70 mb-12 max-w-xl mx-auto">Kind words from people I've had the pleasure to work with</p>
      <div class="grid md:grid-cols-2 gap-8">
       <div class="testimonial-card card-hover p-8 rounded-2xl" id="testimonial-1">
-       <p class="text-lg mb-6 leading-relaxed opacity-90">"Junhyung has an extraordinary ability to transform abstract concepts into stunning visual experiences. Working with him was an absolute pleasure."</p>
+       <p class="text-lg mb-6 leading-relaxed opacity-90">"Junhyung has consistently demonstrated himself to be a highly motivated, kind, and mature student.  I have no doubt that Junhyung would be an excellent addition to any program at Claremont Secondary. He does an impressive job balancing his academic responsibilites alongside his extracurricular commitments, demonstrating strong time managagement and dedication. <b>Please give his application your full consideration, as I believe he is most deserving of this opportunity."</b></p>
        <div class="flex items-center gap-4">
         <div class="w-12 h-12 rounded-full flex items-center justify-center text-xl" id="test-avatar-1">
-         👩‍💼
+         👩‍🎓
         </div>
         <div>
-         <p class="font-semibold">Sarah Chen</p>
-         <p class="text-sm opacity-60">CEO, TechVentures</p>
+         <p class="font-semibold">Sara Pratt (she/her)</p>
+         <p class="text-sm opacity-60"><a href="/sara.heic" style="color:blue; text-decoration: underline;"><b>See full recommendation here</b></a></p>
         </div>
        </div>
       </div>
       <div class="testimonial-card card-hover p-8 rounded-2xl" id="testimonial-2">
-       <p class="text-lg mb-6 leading-relaxed opacity-90">"The attention to detail and creative problem-solving Junhyung brings to every project is unmatched. He exceeded all our expectations."</p>
+       <p class="text-lg mb-6 leading-relaxed opacity-90">" Junhyung is a strong communicator who consistently enriches classroom discussions with
+insightful and respectful contributions. His presentations are polished and engaging, demonstrating confidence,
+clear organization, and strong audience awareness. He makes meaningful connections across continuity and change and confidently applies multiple
+perspectives. He is working well to draw parallels between historical reorganizations and contemporary global issues"</p>
        <div class="flex items-center gap-4">
         <div class="w-12 h-12 rounded-full flex items-center justify-center text-xl" id="test-avatar-2">
-         👨‍💻
+         📖
         </div>
         <div>
-         <p class="font-semibold">Michael Park</p>
-         <p class="text-sm opacity-60">Product Lead, InnovateCo</p>
+         <p class="font-semibold">David Lloyd (he/him)</p>
+         <p class="text-sm opacity-60">Teacher, Socials and LA</p>
         </div>
        </div>
       </div>
       <div class="testimonial-card card-hover p-8 rounded-2xl" id="testimonial-3">
-       <p class="text-lg mb-6 leading-relaxed opacity-90">"Not only is Junhyung incredibly talented, but he's also a fantastic collaborator. He truly listens and delivers beyond expectations."</p>
+       <p class="text-lg mb-6 leading-relaxed opacity-90">"Junhyung's strong work ethic in band has led to exceptional skill on his instrument and the ability to perform advanced repertoire and improvise with musicality and confidence. Junhyung often shows leadership amongst his peers and takes advantage of enrichment opportunities to further develop his skills. I am confident that the work ethic and excellence that I see from Junhyung in the band classroom is evident in many other subject areas."</p>
        <div class="flex items-center gap-4">
         <div class="w-12 h-12 rounded-full flex items-center justify-center text-xl" id="test-avatar-3">
-         👩‍🎨
+         🎼
         </div>
         <div>
-         <p class="font-semibold">Emily Rodriguez</p>
-         <p class="text-sm opacity-60">Creative Director, DesignHub</p>
+         <p class="font-semibold">Jonnie Bridgman (he/him)</p>
+         <p class="text-sm opacity-60"><a href="/bridgman.pdf"style="color:blue; text-decoration: underline;"><b>See full recommendation here</b></a></p>
         </div>
        </div>
       </div>
       <div class="testimonial-card card-hover p-8 rounded-2xl" id="testimonial-4">
-       <p class="text-lg mb-6 leading-relaxed opacity-90">"Junhyung's work ethic and creative vision helped us achieve a complete brand transformation. Highly recommended!"</p>
+       <p class="text-lg mb-6 leading-relaxed opacity-90">"I have known Junhyung for the last two years as he has been a member of both the Debate and Social Justice clubs. He not only comes prepared with research, he supports his teammates and always has thoughtful and in-depth insights into a variety of issues. He is unfailingly polite and yet will stick with an argument to really explore deeper concepts. He will be an enormous asset to the IGS program."</p>
        <div class="flex items-center gap-4">
         <div class="w-12 h-12 rounded-full flex items-center justify-center text-xl" id="test-avatar-4">
-         👨‍🔬
+         🍁
         </div>
         <div>
-         <p class="font-semibold">David Kim</p>
-         <p class="text-sm opacity-60">Founder, StartupLab</p>
+         <p class="font-semibold">Allison Adams (she/her)</p>
+         <p class="text-sm opacity-60">Debate & Social Justice</p>
         </div>
        </div>
       </div>
