--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         </div>
         <div>
          <p class="font-semibold">Sara Pratt (she/her)</p>
-         <p class="text-sm opacity-60"><a href="/sara.heic" style="color:blue; text-decoration: underline;"><b>See full recommendation here</b></a></p>
+         <p class="text-sm opacity-60"><a href="https://drive.google.com/file/d/1n33nVNcT1IoJyVzEgBUtJoGnKRT_cXMf/view?usp=sharing" style="color:blue; text-decoration: underline;"><b>See full recommendation here</b></a></p>
         </div>
        </div>
       </div>
@@ -238,7 +238,7 @@ perspectives. He is working well to draw parallels between historical reorganiza
         </div>
         <div>
          <p class="font-semibold">Jonnie Bridgman (he/him)</p>
-         <p class="text-sm opacity-60"><a href="/bridgman.pdf"style="color:blue; text-decoration: underline;"><b>See full recommendation here</b></a></p>
+         <p class="text-sm opacity-60"><a href="https://drive.google.com/file/d/1qXrQu92cM4I8Td1qiu05P_mPUhB5lhyn/view?usp=sharing"style="color:blue; text-decoration: underline;"><b>See full recommendation here</b></a></p>
         </div>
        </div>
       </div>
@@ -484,3 +484,4 @@ perspectives. He is working well to draw parallels between historical reorganiza
   </script>
  <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9d02018483e0ce23',t:'MTc3MTQ2NDY5OS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
+
