--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <div class="text-center relative z-10 max-w-4xl">
      <div class="mb-6 animate-fade-in">
       <div class="w-32 h-32 mx-auto rounded-full flex items-center justify-center text-5xl animate-pulse-glow" id="avatar-ring">
-       🍃
+       <img src="Screenshot 2026-02-24 160634.png" height="80px" width="80px" style="justify-content: center; align-items: center; border-radius: 50%; object-fit: cover;">
       </div>
      </div>
      <h1 class="font-display text-5xl md:text-7xl font-bold mb-4 animate-fade-in-delay-1" id="hero-name">Junhyung Choi</h1>
@@ -484,4 +484,5 @@ perspectives. He is working well to draw parallels between historical reorganiza
   </script>
  <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9d02018483e0ce23',t:'MTc3MTQ2NDY5OS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
+
 
