--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <div class="max-w-6xl mx-auto px-6 py-4 flex justify-between items-center">
      <span class="font-display text-xl font-semibold" id="nav-name">JC</span>
      <div class="hidden md:flex gap-8">
-      <a href="#about" class="text-sm font-medium hover:opacity-70 transition-opacity nav-link">About</a> <a href="#fun-facts" class="text-sm font-medium hover:opacity-70 transition-opacity nav-link">About Me</a> <a href="#accomplishments" class="text-sm font-medium hover:opacity-70 transition-opacity nav-link">Accomplishments</a> <a href="#testimonials" class="text-sm font-medium hover:opacity-70 transition-opacity nav-link">What They Say</a>
+      <a class="text-sm font-medium hover:opacity-70 transition-opacity nav-link"></a> <a href="#fun-facts" class="text-sm font-medium hover:opacity-70 transition-opacity nav-link">About Me</a> <a href="#accomplishments" class="text-sm font-medium hover:opacity-70 transition-opacity nav-link">Accomplishments</a> <a href="#testimonials" class="text-sm font-medium hover:opacity-70 transition-opacity nav-link">What They Say</a>
      </div>
     </div>
    </nav><!-- Hero Section -->
@@ -484,5 +484,6 @@ perspectives. He is working well to draw parallels between historical reorganiza
   </script>
  <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9d02018483e0ce23',t:'MTc3MTQ2NDY5OS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
+
 
 
